# ts3news

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .jules_temp_status.sh  Dockerfile  README.md  battle_simulation.py  check_untranslated.py  count_words.py  docker-compose.ghcr.yml  docker-compose.override.yml  docker-compose.yml  en_names.txt  example.env  extract_suffixes.py  fr_names.txt  go.mod  go.sum  nouns.txt  pl_names.txt  ru_translations.txt  run_local_translation.py  suffixes.txt  temp_en.txt  test_tr.py  translate.py  translate_missing.py  translate_pl.py  translate_rpg.py  translate_sv.py  translated_block.txt  update_fr.py  update_nl_yaml.py  update_pl_yaml.py  update_ru.py  words.json
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
cmd/bot/: main.go
cmd/sim/: main.go
cmd/simulation/: main.go
internal/bot/: auction.go  auction_test.go  bot.go  bot_extra_test.go  bot_test.go  channel_name_test.go  idely.go  idely_test.go  loot.go  loot_sync.go  loot_test.go  main_test.go  pm_format_test.go  prestige.go  prestige_test.go  report.go  report_test.go  security.go  supervisor.go  titles.go  web.go  web_abyss.go  web_abyss_bounty.go  web_abyss_customization.go  web_abyss_econ.go  web_abyss_features.go  web_abyss_loot.go  web_abyss_pact.go  web_abyss_shop.go  web_abyss_talents.go  web_abyss_test.go  web_abyss_tree.go  web_ah.go  web_arcade.go  web_arcade3d.go  web_arcade_balance_test.go  web_arcade_games.go  web_arcade_jackpot.go  web_battle.go  web_leaderboard.go  (+11 more)
internal/clientquery/: clientquery.go  clientquery_extra_test.go  clientquery_test.go  commands.go  commands_idle_test.go  commands_test.go  files.go  icons_test.go
internal/config/: config.go  config_test.go
internal/content/: abyss_biomes.go  abyss_talents.go  abysstree.go  abysstree_test.go  artifacts.go  artifacts_test.go  content_test.go  greetings.go  hazards.go  hazards_test.go  holiday.go  iconnames.go  localized_names_test.go  main_test.go  mobs.go  mobs_extra_test.go  mobs_test.go  nicknames.go  skills.go  skills_test.go  stealth.go  stealth_test.go  trivia.go  unique_items.go  unique_items_test.go  zones.go  zones_test.go
internal/db/: db_test.go  migrate.go
internal/games/: games.go  games_test.go  sources.go
internal/i18n/: bundle.go  completeness_test.go  i18n.go  i18n_test.go  number.go  plural.go
internal/icon/: generator.go
internal/icons/: icons.go  icons_test.go
internal/idely/: audiobot.go  audiobot_test.go  detect.go  detect_test.go  engine.go  engine_test.go  player.go  service.go  service_test.go  snapshot.go  tracker.go  tracker_test.go
internal/leveling/: leveling.go  leveling_extra_test.go  leveling_fuzz_test.go  leveling_test.go
lib/ts3sdk/samples/source/: CMakeLists.txt  generate_vs_2022.bat  linux_x64.sh  mac.sh
lib/ts3sdk/samples/source/client/: main.c
lib/ts3sdk/samples/source/client_cpp_repeater/: connection_handler.cpp  connection_handler.hpp  custom_device.cpp  custom_device.hpp  helpers.cpp  helpers.hpp  main.cpp  sources.cmake  ts_client.cpp  ts_client.hpp
lib/ts3sdk/samples/source/client_customdevice/: main.c
lib/ts3sdk/samples/source/client_minimal/: main.c
lib/ts3sdk/samples/source/client_minimal_filetransfer/: main.c
lib/ts3sdk/samples/source/cmake/: ide.cmake  linux_armv8_toolchain.cmake
lib/ts3sdk/samples/source/server/: main.c
lib/ts3sdk/samples/source/server_creation_params/: main.c
lib/ts3sdk/samples/source/server_filetransfer/: main.c
lib/ts3sdk/samples/source/server_minimal/: main.c
lib/ts3sdk/samples/source/server_permissions/: main.c
plans/: 400_improvements_backlog.md  balance-simulation.md  i18n-architecture.md
runtime/: entrypoint.sh  inject_identity.py  ts3profile.tgz
(+259 files in other folders)
